uses bl_iot_sdk as external repository, runs tests on CircleCI

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "/Users/sychram/Repositories/bl_iot_sdk-ubuntu/bl_iot_sdk"]
 	path = /Users/sychram/Repositories/bl_iot_sdk-ubuntu/bl_iot_sdk
 	url = git@github.com:pine64/bl_iot_sdk.git
+[submodule "bl_iot_sdk"]
+	path = bl_iot_sdk
+	url = git@github.com:pine64/bl_iot_sdk.git
