--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run:
           command: |
             ls -la && \
-            cd /opt/sdk && \
+            cd ./bl_iot_sdk && \
             docker run -v $(pwd)/bl_iot_sdk:/opt/sdk suculent/bl_iot_sdk-ubuntu:latest bash -c 'cd /opt/sdk/customer_app/bl602_boot2_mini && make'
 
 #
