--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: |
             git submodule init
             git submodule update --remote
+            git pull --recurse-submodules
       - docker/check
       - run:
           command: |
