--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,11 @@ jobs:
       - docker/check
       - run:
           command: |
-            ls -la && \
+            git clone https://github.com/pine64/bl_iot_sdk && \
             cd ./bl_iot_sdk && \
-            docker run -v $(pwd)/bl_iot_sdk:/opt/sdk suculent/bl_iot_sdk-ubuntu:latest bash -c 'cd /opt/sdk/ && ls -la && cd ./customer_app/bl602_boot2_mini && make'
+            ls -la && \
+            docker run -v $(pwd)/bl_iot_sdk:/opt/sdk suculent/bl_iot_sdk-ubuntu:latest bash -c 'cd /opt/sdk/ && ls -la'
+#  && cd ./customer_app/bl602_boot2_mini && make
 
 #
 # WORKFLOWS
